src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Counties</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dues_Paying_Union_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dues Paying Union Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Area__c</fullName>
        <description>Outreach area related to training outreach</description>
        <inlineHelpText>Outreach area related to training outreach</inlineHelpText>
        <label>Outreach Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Counties</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_County__c</fullName>
        <formula>TEXT(County__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outreach County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Date_Last_Sent__c</fullName>
        <label>Outreach Date Last Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outreach_Date_Last_Training__c</fullName>
        <label>Outreach Date Last Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outreach_Days_Since_Last_Sent_Outreach__c</fullName>
        <formula>IF(ISBLANK(Outreach_Date_Last_Sent__c), 999, ABS(TODAY() - Outreach_Date_Last_Sent__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outreach Days Since Last Sent Outreach</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Days_Since_Last_Training__c</fullName>
        <formula>IF( ISBLANK(Outreach_Date_Last_Training__c), 999,  ABS(TODAY() - Outreach_Date_Last_Training__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outreach Days Since Last Training</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Most_Recent_Training_Area__c</fullName>
        <description>Most recent training area related to the contact</description>
        <inlineHelpText>Most recent training area related to the contact</inlineHelpText>
        <label>Outreach Most Recent Training Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Counties</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Region__c</fullName>
        <formula>TEXT(Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outreach Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_State__c</fullName>
        <formula>MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outreach State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FCS - Family Childcare System</fullName>
                </value>
                <value>
                    <fullName>IFC - Independent Family Childcare</fullName>
                </value>
                <value>
                    <fullName>FCS</fullName>
                </value>
                <value>
                    <fullName>ICC</fullName>
                </value>
                <value>
                    <fullName>IFC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Counties</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Id__c</fullName>
        <externalId>true</externalId>
        <label>State Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Union_Id__c</fullName>
        <label>Union Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>